--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml+jpg" href="/public/zoz.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>zozjr</title>
     <link rel="stylesheet" href="./public/style.css">
   </head>
   <body>
